--- a/.github/workflows/daily-activity.yml
+++ b/.github/workflows/daily-activity.yml
@@ -1,8 +1,9 @@
-name: Daily Activity Update (Test Every 5 Minutes)
+name: Daily Activity Update
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    # Runs at 9 AM IST and 6 PM IST (03:30 & 12:30 UTC)
+    - cron: "30 3,12 * * *"
   workflow_dispatch:
 
 permissions:
@@ -25,7 +26,7 @@ jobs:
         run: |
           UTC_TIME=$(date -u +"%Y-%m-%d %H:%M:%SZ")
           IST_TIME=$(TZ='Asia/Kolkata' date +"%Y-%m-%d %H:%M:%S %Z")
-          UNIQUE_ID=$(uuidgen)  # generates a unique ID each run
+          UNIQUE_ID=$(uuidgen)
           echo "$UTC_TIME | $IST_TIME - Daily note: learning/practice logged | ID: $UNIQUE_ID" >> activity_log.md
 
       - name: Commit & push changes
